@@ -1,3 +1,6 @@
+2014-01-18  Brian Tiffin
+
+	* Small changes to prepare for GNU Cobol 1.1 FTP upload
 
 2013-09-29  Brian Tiffin & Simon  Sobisch
 
